@@ -4,7 +4,6 @@ IN PROGRESS
 HAL - 8a18dd34-9c59-42b6-94b0-0b4a7358f65c - milsymbol: @syncpoint/milsymbol npm deployment
 
 OPEN
-Bug/selection: select-all in featues/sidebar, cmd-click option -> disco
 Multiselect: test procedures
 MiniSearch: MIP Scenario - '@feature #unit 3osc' - no match ('3osc')
 MiniSearch: MIP Scenario - '@layer Phase 4A Enemy' - no match ('4a')
@@ -24,7 +23,6 @@ e66484aa-82e7-406e-98df-ae336b884d4c - project list: focus new project's name fo
 216fa1b9-5b91-4460-8695-21e8d427a38e - project list: support clipboard operations
 c5687f5a-3757-4ba4-9419-fb4cac441932 - project list: support undo/redo
 b73b6b06-24b8-4861-92e4-e3e5ce494588 - UI: switch to Roboto font face
-5ddb2139-daf4-4ca1-902d-3149e4b191cd - multiselect/selection: improve behavior
 d6802e39-ee47-49b6-81dd-427026bb0950 - performance: checkout TerserPlugin/WebPack
 d0bb6e10-080a-4fe6-85b6-563cbd571d7f - query/performance: skip search if result does not contain updated ids
 481d485a-83b3-4136-a819-5fcb56a14217 - OSD
